# django-app

./: .env.template  Dockerfile  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  quieries.sql  requirements.txt
mysite/: db.sqlite3  demo.py  log.txt  log.txt.1  shopapp-fixtures.json
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_article.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.mo  django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order_receipt.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0003_product_preview.py  0004_order.py  0004_productimage.py  0005_alter_order_options_alter_product_options_and_more.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_product_created_by.py
(+37 files in other folders)
