[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Nikita Vyskubov <vysnik@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-debug-toolbar = "^4.2.0"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
